--- a/src/app/medico/components/ng-content-componet/ng-content-componet.component.html
+++ b/src/app/medico/components/ng-content-componet/ng-content-componet.component.html
@@ -1,14 +1,14 @@
-<div class="content">
-  <div class="header">
-    <ng-content select="[header]"></ng-content>
-  </div>
+<!-- <div class="content"> 
+  <div class="header"> 
+    <ng-content select="[header]"></ng-content> 
+ </div>
 
-  <div class="conteudo">
-    <div class="menu">
-      <ng-content select=".menu"></ng-content>
-    </div>
-    <ng-content select="[conteudo]"></ng-content>
-  </div>
+ <div class="conteudo">
+   <div class="menu">
+     <ng-content select=".menu"></ng-content> 
+   </div>
+   <ng-content select=".lista"></ng-content> 
+ </div>
 
-  <ng-content select="[footer]"></ng-content>
-</div>
+ <ng-content select="[footer]"></ng-content> 
+</div> -->
