--- a/src/app/paciente/listar/listar.component.html
+++ b/src/app/paciente/listar/listar.component.html
@@ -1,3 +1,59 @@
-<p>listar pacientes</p>
+<mat-toolbar>
+    <mat-toolbar-row>
+      Lista de Pacientes
+    </mat-toolbar-row>
+  </mat-toolbar>
+  
+  <!--<app-diretiva-exemplo></app-diretiva-exemplo>-->
+  <!--<app-pipe-exemplo [medicos]="medicos"></app-pipe-exemplo>-->
+  <!--<br>-->
+  
+  <div class="content">
+    <table mat-table [dataSource]="pacientes" class="mat-elevation-z8">
+  
+      <ng-container matColumnDef="nome">
+        <th mat-header-cell *matHeaderCellDef> nome </th>
+        <td mat-cell *matCellDef="let paciente"> {{ pacientes.nome }} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="endereco">
+        <th mat-header-cell *matHeaderCellDef> endereco </th>
+        <td mat-cell *matCellDef="let paciente"> {{ pacientes.endereco }} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="cpf">
+        <th mat-header-cell *matHeaderCellDef> cpf </th>
+        <td mat-cell *matCellDef="let paciente"> {{ pacientes.cpf }} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="cep">
+        <th mat-header-cell *matHeaderCellDef> cep </th>
+        <td mat-cell *matCellDef="let paciente"> {{ pacientes.cep }} </td>
+      </ng-container>
 
-<router-outlet></router-outlet>
+      <ng-container matColumnDef="telefone">
+        <th mat-header-cell *matHeaderCellDef> telefone </th>
+        <td mat-cell *matCellDef="let paciente"> {{ pacientes.telefone }} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="acoes">
+        <th mat-header-cell *matHeaderCellDef>  </th>
+        <td mat-cell *matCellDef="let paciente">
+          <div class="acoes">
+            <button color="warn" mat-flat-button (click)="remover(paciente)">
+              Remover
+            </button>
+  
+            <button color="primary" mat-flat-button (click)="editar(paciente)">
+              Editar
+            </button>
+          </div>
+        </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="colunas"></tr>
+      <tr mat-row *matRowDef="let row; columns: colunas;"></tr>
+    </table>
+  </div>
+  
+  
