--- a/src/app/usuario/listar/listar.component.html
+++ b/src/app/usuario/listar/listar.component.html
@@ -1,12 +1,6 @@
 <mat-toolbar>
   <mat-toolbar-row>
     Lista de Usuário
-
-    <button mat-icon-button color="primary" routerLink="novo">
-      <mat-icon matTooltip="Cadastrar">add</mat-icon>
-    </button>
-
-
   </mat-toolbar-row>
 </mat-toolbar>
 
@@ -15,12 +9,12 @@
 <!--<app-pipe-exemplo [medicos]="medicos"></app-pipe-exemplo>-->
 <!--<br>-->
 
-<app-ng-content-componet>
+<!-- <app-ng-content-componet>
   <div header>header</div>
   <div class="menu">menu</div>
-  <div conteudo>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur dignissimos eum exercitationem expedita facere harum magni necessitatibus, nihil nisi non, pariatur porro tempora? Ducimus necessitatibus provident quis, quod soluta voluptas.</div>
+  <div conteudo>Lorem ipsum dolor sit amet.</div>
   <div footer>footer</div>
-</app-ng-content-componet>
+</app-ng-content-componet> -->
 
 <div class="content">
   <table mat-table [dataSource]="usuarios" class="mat-elevation-z8">
@@ -30,14 +24,14 @@
       <td mat-cell *matCellDef="let usuario"> {{ usuario.nome }} </td>
     </ng-container>
 
-    <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef> senha </th>
-      <td mat-cell *matCellDef="let usuario"> {{ usuario.senha }} </td>
+    <ng-container matColumnDef="dataNascimento">
+      <th mat-header-cell *matHeaderCellDef> Data de Nascimento </th>
+      <td mat-cell *matCellDef="let usuario"> {{ usuario.dataNascimento }} </td>
     </ng-container>
 
-    <ng-container matColumnDef="crm">
-      <th mat-header-cell *matHeaderCellDef> crm </th>
-      <td mat-cell *matCellDef="let usuario"> {{ usuario.confirmar }} </td>
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef> email </th>
+      <td mat-cell *matCellDef="let usuario"> {{ usuario.email }} </td>
     </ng-container>
 
     <ng-container matColumnDef="acoes">
